--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -215,6 +215,18 @@
         {{#if incomeReports}}
         <script src="js/helpers/api/incomeReports.js"></script>
         {{/if}}
+        {{#if userEarnings}}
+        <script src="js/helpers/api/userEarning.js"></script>
+        {{/if}}
+        {{#if notifications}}
+        <script src="js/helpers/api/notification.js"></script>
+        {{/if}}
+        {{#if announcements}}
+        <script src="js/helpers/api/announcement.js"></script>
+        {{/if}}
+        {{#if manageDocument}}
+        <script src="js/helpers/api/manageDocument.js"></script>
+        {{/if}}
     </body>
     
     </html>
