--- a/views/notifications.html
+++ b/views/notifications.html
@@ -58,32 +58,23 @@
                                                 <div class="review-content-section">
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
-                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                        <form id="addNotification" class="payment-form mg-t-30 form-border-input-show text-white-label ">
                                                       
                                                             <div class="form-group">
                                                                 <label for="email">Title</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <input name="title" type="text" class="form-control" placeholder="">
                                                             </div>
                                                          
                                                             <div class="form-group">
                                                                 <label for="email">Content</label>
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea name="content" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
-                                                            
-                                        <div class=" row hpanel mt-b-30 col-lg-3 col-md-3 col-sm-10 col-xs-12">
-                                            <div class="panel-body file-body file-cs-ctn">
-                                                
-                                               <img src="https://www.csklegal.com/wp-content/uploads/2014/07/no-image.png" height="50px" width="50px">
-                                            </div>
-                                            <div class="panel-footer">
-                                                 <input id="uploadSelfieInput" type="file" class="form-control"/>  
-                                            </div>
-                                        </div>
+    
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Add</button>
+                                                                <button id="addBtn" type="submit" class="btn btn-success btn-block ">Add Notification</button>
                                                             </div>
                                                         </form>
                                                     </div>
