--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -21,8 +21,7 @@
                                         <div class="breadcomb-ctn row col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                             <div  class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
                                                 <div class="form-group">
-                                                    
-                                                    <input name="cvc" type="text" class="form-control" placeholder="Enter UserId">
+                                                   <h1 style="color: white;">User Account Update</h1>
                                                 </div>
                                             </div>
                                 
